# minicsv

./: cabal.haskell-ci  minicsv.cabal
.github/workflows/: haskell-ci.yml
src/: MiniCSV.hs
tests/: minicsv-tests.hs
